[gd_scene load_steps=9 format=3 uid="uid://dwkiu5duhv6vr"]

[ext_resource type="Script" uid="uid://dp3o0lto78g8n" path="res://scene/battle_scene.gd" id="1_662de"]
[ext_resource type="Texture2D" uid="uid://bshg0rwtoxmre" path="res://assets/tower/tower_base/tower_base_1.png" id="3_5pnl2"]
[ext_resource type="Texture2D" uid="uid://cv35xbi4r3452" path="res://assets/tower/tower_fast/tower_fast_1.png" id="4_8oj1d"]
[ext_resource type="Texture2D" uid="uid://byy3f86kqav0" path="res://assets/tower/tower_area/tower_area_1.png" id="5_5pnl2"]
[ext_resource type="PackedScene" uid="uid://ckkdkqr08oy5x" path="res://scene/setting_menu.tscn" id="6_0l81w"]
[ext_resource type="Texture2D" uid="uid://bda3f22nwdvhx" path="res://assets/tower/tower_frost/tower_frost_1.png" id="6_5pnl2"]
[ext_resource type="Texture2D" uid="uid://d03ygnu0fdixo" path="res://assets/tower/tower_fast_low_damage/tower_fast_low_damage_1.png" id="7_5pnl2"]
[ext_resource type="Texture2D" uid="uid://cfjxfqeggorpa" path="res://assets/tower/tower_zi/tower_zi_1.png" id="8_5pnl2"]

[node name="BattleScene" type="Node2D"]
position = Vector2(-1, 1)
script = ExtResource("1_662de")

[node name="UI" type="CanvasLayer" parent="."]

[node name="SettingButton" type="Button" parent="UI"]
top_level = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -189.0
offset_bottom = 88.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "SETTINGS"

[node name="Coins" type="Label" parent="UI"]
offset_left = 5.0
offset_top = -1.0
offset_right = 131.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 25
text = "COINS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Diamonds" type="Label" parent="UI"]
offset_left = 184.0
offset_top = -2.0
offset_right = 357.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 25
text = "DIAMONDS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 88.0
offset_top = -1.0
offset_right = 273.0
offset_bottom = 89.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "WAVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingMenu" parent="UI" instance=ExtResource("6_0l81w")]
visible = false
offset_left = 1.0
offset_top = 3.0
offset_right = 1.0
offset_bottom = 3.0

[node name="BoxContainer" type="BoxContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -162.0
offset_right = 620.0
grow_vertical = 0

[node name="NormalTowerButton" type="Button" parent="UI/BoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
icon = ExtResource("3_5pnl2")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/BoxContainer/NormalTowerButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "50"

[node name="FastTowerButton" type="Button" parent="UI/BoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
icon = ExtResource("4_8oj1d")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/BoxContainer/FastTowerButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "100"

[node name="AreaTowerButton" type="Button" parent="UI/BoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
icon = ExtResource("5_5pnl2")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/BoxContainer/AreaTowerButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "200"

[node name="FrostTowerButton" type="Button" parent="UI/BoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
icon = ExtResource("6_5pnl2")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/BoxContainer/FrostTowerButton"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "100"

[node name="FastLowTowerButton" type="Button" parent="UI/BoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
icon = ExtResource("7_5pnl2")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/BoxContainer/FastLowTowerButton"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "500"

[node name="BigAreaTowerButton" type="Button" parent="UI/BoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
icon = ExtResource("8_5pnl2")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/BoxContainer/BigAreaTowerButton"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "200"

[node name="ClearTowerButton" type="Button" parent="UI/BoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "CLEAR"
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/BoxContainer/ClearTowerButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "0"

[node name="WaitTime" type="Label" parent="UI"]
offset_left = 23.0
offset_top = 61.0
offset_right = 358.0
offset_bottom = 154.0
theme_override_font_sizes/font_size = 25
text = "NEXT_WAVE_COUNTDOWN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextWave" type="Button" parent="UI"]
offset_left = 763.0
offset_top = 1.0
offset_right = 938.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 25
text = "START_NEXT_WAVE"

[node name="CurrentEnemyNum" type="Label" parent="UI"]
anchors_preset = -1
anchor_bottom = 0.011
offset_left = 423.0
offset_top = 4.0
offset_right = 701.0
offset_bottom = 76.12
theme_override_font_sizes/font_size = 25
text = "REMAINING_ENEMIES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextWaveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="UI/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="UI/BoxContainer/NormalTowerButton" to="." method="_on_normal_tower_button_pressed"]
[connection signal="pressed" from="UI/BoxContainer/FastTowerButton" to="." method="_on_fast_tower_button_pressed"]
[connection signal="pressed" from="UI/BoxContainer/AreaTowerButton" to="." method="_on_area_tower_button_pressed"]
[connection signal="pressed" from="UI/BoxContainer/FrostTowerButton" to="." method="_on_frost_tower_button_pressed"]
[connection signal="pressed" from="UI/BoxContainer/FastLowTowerButton" to="." method="_on_fast_low_tower_button_pressed"]
[connection signal="pressed" from="UI/BoxContainer/BigAreaTowerButton" to="." method="_on_big_area_tower_button_pressed"]
[connection signal="pressed" from="UI/BoxContainer/ClearTowerButton" to="." method="_on_clear_tower_button_pressed"]
[connection signal="pressed" from="UI/NextWave" to="." method="_on_next_wave_pressed"]
